<resources>
    <string name="app_name">"Marvel Comics "</string>
    <string name="title_activity_detail">Comic Details</string>
    <string name="title_activity_about">About</string>
    <string name="public_api_key">54306733de0f5cd1418aa05a85fa062a</string>
    <string name="hire_me">"I'd love to work with you on \n many more cool project. \n Hire Me ;)"</string>

    <!-- Browse Comics -->

    <!-- Menu -->
    <string name="menu_sort_title">Title</string>
    <string name="menu_sort_saleDate">Sale Date</string>
    <string name="menu_sort_issueNumber">Issue Number</string>
    <string name="menu_sort_modified">Modified</string>
    <string name="menu_scroll_to_top">Scroll to top</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_about">About</string>
    <string name="menu_activity_about">About</string>

    <string name="action_order_by">Order by</string>
    <string name="action_order_by_title">Title</string>
    <string name="action_order_by_onsaleDate">On Sale</string>
    <string name="action_sort_by_issueNumber">Issue Number</string>

    <string name="extras">Extras</string>


    <!-- About -->
    <string name="by">by</string>
    <string name="developer_name">Andre Hitchman</string>
    <string name="about_text">\nLicensed under the Apache License v2.\n \t \t \t Source available on <a href="https://github.com/SandBoxDeveloper/Marvel-Comics-App">GitHub</a>.\n</string>


    <!-- Spinner -->
    <string name="spinner_heading">Order By</string>

    <!-- Common -->
    <string name="view_empty_message">No matching items</string>
    <string name="view_error_message">This content is not available offline.</string>

    <string name="release_date">"Released: "</string>
    <string name="pages">"Pages: "</string>
    <string name="price">"Price: £"</string>
    <string name="author">"By: "</string>
    <string name="description">"Description: "</string>


    <!-- SyncAdapter related -->
    <string name="sync_account_type">marvelcomics.example.com</string>
    <string name="content_authority">com.hulldiscover.zeus.marvelcomics</string>

    <!-- Notification -->
    <string name="notification">App has been updated</string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <!-- Detailed View -->
    <string name="detail_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
    </string>

</resources>
